# impact-vue

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md
.comate/specs/01-project-init/: doc.md  summary.md  tasks.md
.comate/specs/02-graph-engine/: doc.md  summary.md  tasks.md
.comate/specs/03-cross-component/: doc.md
crates/impact-cli/: Cargo.toml
crates/impact-cli/src/: main.rs
crates/impact-cli/src/commands/: analyze.rs  mod.rs  rag.rs
crates/impact-core/: Cargo.toml
crates/impact-core/src/: lib.rs
crates/impact-core/src/analyzer/: cross_module.rs  graph_builder.rs  import_resolver.rs  init_phase.rs  mod.rs  path_finder.rs  path_utils.rs  pruning.rs  step.rs  target_resolver.rs
crates/impact-core/src/model/: confidence.rs  evidence.rs  graph.rs  ir.rs  mod.rs
crates/impact-core/src/reporter/: mod.rs
crates/impact-framework/: Cargo.toml
crates/impact-framework/src/: lib.rs
crates/impact-js-ts/: Cargo.toml
crates/impact-js-ts/src/: lib.rs  script_analyzer.rs
crates/impact-rag/: Cargo.toml
crates/impact-rag/src/: lib.rs
crates/impact-rag/src/chunker/: mod.rs
crates/impact-rag/src/embedding/: mod.rs
crates/impact-rag/src/parser/: mod.rs
crates/impact-rag/src/searcher/: mod.rs
crates/impact-rag/src/store/: mod.rs
crates/impact-vue/: Cargo.toml
crates/impact-vue/src/: adapter.rs  lib.rs  script_analyzer.rs  sfc_parser.rs  template_analyzer.rs
fixtures/vue/async/: AsyncComponent.vue
fixtures/vue/basic/: Counter.vue  SetupCounter.vue
fixtures/vue/cross-file/: Counter.vue  store.ts
fixtures/vue/parent-child/: Child.vue  Parent.vue
fixtures/vue/pinia/: Counter.vue  counterStore.ts
