[package]
name = "impact-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "impact"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
globset.workspace = true
impact-core.workspace = true
impact-framework.workspace = true
impact-vue.workspace = true
