[package]
name = "impact-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
globset.workspace = true
indexmap.workspace = true
anyhow.workspace = true
